--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,5 +1,5 @@
 
-<h1>New Article</h1>
+<h1>New Author</h1>
 <%= form_with scope: :author, url: authors_path, local: true do |form| %>
   <p>
     <%= form.label :title %><br>
