--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -2,18 +2,18 @@
 
 <table>
     <tr>
-        <th>First Name</th>
-        <th>Last Name</th>
+        <th>Name</th>
         <th>Homepage</th>
         <th></th>
     </tr>
 
     <% @authors.each do |author| %>
         <tr>
-            <td><%= author.first_name %></td>
-            <td><%= author.last_name %></td>
+            <td><%= author.name %></td>
             <td><%= author.homepage %></td>
             <td><%= link_to 'Show' , author_path(author) %></td>
         </tr>
     <% end %>
 </table>
+
+<%= link_to 'New' , new_author_path %>
