--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<h1>Detailpage</h1>
 <p>
   <strong>Title:</strong>
   <%= @paper.title %>
@@ -13,6 +14,13 @@
 <p>
   <strong>Year:</strong>
   <%= @paper.year %>
+</p>
+
+<p>
+  <strong>Author:</strong>
+  <%= @paper.authors.each do |author| %>
+    <%= author.name %>
+  <% end %>
 </p>
 
 <%= link_to 'Edit', edit_paper_path(@paper) %> |
